--- a/.gitignore
+++ b/.gitignore
@@ -216,5 +216,6 @@ dmypy.json
 [Ss]cripts
 pyvenv.cfg
 pip-selfcheck.json
+.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,venv
