--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ black==20.8b1
 click==7.1.2
 Django==3.1.1
 djangorestframework==3.11.1
+djangorestframework-jwt==1.11.0
 importlib-metadata==1.7.0
 iniconfig==1.0.1
 more-itertools==8.5.0
@@ -14,6 +15,7 @@ pathspec==0.8.0
 
 pluggy==0.13.1
 py==1.9.0
+PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.0.1
 pytz==2020.1
