--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ more-itertools==8.5.0
 mypy-extensions==0.4.3
 packaging==20.4
 pathspec==0.8.0
-
+psycopg2-binary==2.8.5
 pluggy==0.13.1
 py==1.9.0
 PyJWT==1.7.1
