Code changed using black

--- a/.gitignore
+++ b/.gitignore
@@ -217,5 +217,6 @@ dmypy.json
 pyvenv.cfg
 pip-selfcheck.json
 .idea
+.vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,venv
